# PMPi-Firmware

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE_MONGOOSE  README.md  get_env.cmake  pmpi.cppcheck
.github/workflows/: documentation.yaml  multi-gcc.yml
all/: CMakeLists.txt
bootloader/: CMakeLists.txt  app_memmap.in.ld  application_memmap.ld  asm.py  boot_memmap.in.ld  bootloader_memmap.ld  com_memmap.in.ld  header.py  hex_usb.py
bootloader/include/: bootloader.h  bootloader_config.h  dma_util.h  flash.h  hex.h  led.h
bootloader/source/: bootloader.c  dma_util.c  flash.c  hex.c  led.c  main.c  memmap.ld
cmake/: tools.cmake  usage.cmake
documentation/: CMakeLists.txt
include/: FreeRTOSConfig.h  lwipopts.h  net.h  test.hpp
modules/: .gitignore
modules/common_api/: CMakeLists.txt
modules/common_api/include/: consteval_assert.hpp
modules/common_api/include/common/: delay.hpp  gpio.hpp  macro.hpp  millis.hpp  peripheral.hpp
modules/dma/: CMakeLists.txt
modules/dma/include/dma/: dma.hpp  memory.hpp
modules/dma/source/dma/: memory.cpp
modules/flash/: CMakeLists.txt
modules/flash/include/flash/: spi.hpp
modules/flash/source/flash/: spi.cpp
modules/freertos_config/: CMakeLists.txt
modules/freertos_config/include/: FreeRTOSFATConfig.h
modules/gpib/: CMakeLists.txt
modules/gpib/include/: gpib.hpp
modules/gpib/include/gpib/: bus.hpp  controller.hpp  device.hpp  interface.hpp  node.hpp  routines.hpp  types.hpp
modules/gpib/source/: gpib.cpp
modules/gpib/source/gpib/: bus.cpp  controller.cpp  device.cpp  interface.cpp  node.cpp
modules/i2c/: CMakeLists.txt
modules/i2c/include/: i2c.hpp  test.hpp
modules/log/: CMakeLists.txt
modules/log/include/: log.hpp
modules/spi/: CMakeLists.txt
modules/spi/include/: spi.hpp
source/: hw_config.c  main.cpp  net.c  packed_fs.c  test.cpp
